--- a/Poliklinika.Mobile/Poliklinika.Mobile/Views/AboutPage.xaml
+++ b/Poliklinika.Mobile/Poliklinika.Mobile/Views/AboutPage.xaml
@@ -14,36 +14,33 @@
             <Color x:Key="Accent">#96d1ff</Color>
         </ResourceDictionary>
     </ContentPage.Resources>
-
+  
     <Grid>
+
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <StackLayout BackgroundColor="{StaticResource Accent}" VerticalOptions="FillAndExpand" HorizontalOptions="Fill">
+        <StackLayout BackgroundColor="White" VerticalOptions="FillAndExpand" HorizontalOptions="Fill">
             <StackLayout Orientation="Horizontal" HorizontalOptions="Center" VerticalOptions="Center">
                 <ContentView Padding="0,40,0,40" VerticalOptions="FillAndExpand">
-                    <Image Source="xamarin_logo.png" VerticalOptions="Center" HeightRequest="64" />
+                    <Image Source="logo.JPG" VerticalOptions="Center" HeightRequest="123" />
                 </ContentView>
             </StackLayout>
         </StackLayout>
         <ScrollView Grid.Row="1">
-            <StackLayout Orientation="Vertical" Padding="30,24,30,24" Spacing="10">
-                <Label Text="Start developing now" FontSize="Title"/>
-                <Label Text="Make changes to your XAML file and save to see your UI update in the running app with XAML Hot Reload. Give it a try!" FontSize="16" Padding="0,0,0,0"/>
-                <Label FontSize="16" Padding="0,24,0,0">
-                    <Label.FormattedText>
-                        <FormattedString>
-                            <FormattedString.Spans>
-                                <Span Text="Learn more at "/>
-                                <Span Text="https://aka.ms/xamarin-quickstart" FontAttributes="Bold"/>
-                            </FormattedString.Spans>
-                        </FormattedString>
-                    </Label.FormattedText>
-                </Label>
+            <StackLayout Orientation="Vertical" Padding="30,24,30,24" Spacing="15">
+                <Label Text="Zdrava osoba je sretna osoba!" FontSize="Header"/>
+                <Label Text="Dođite i uvjerite se da smo tim kojem možete vjerovati. Naš zajednički cilj je Vaše zdravlje. Zaboravite čekanje na pregled, zakažite svoj pregled već danas, kada to Vama odgovara, a ostalo prepustite nama." FontSize="16" Padding="0,0,0,0"/>
+                <Label Text="Kreirajte svoj profil i postanite dio naše porodice. Ukoliko Vam je potreban savjet obratite se našim doktorima koji su uvijek tu za Vas." FontSize="16" Padding="0,0,0,0" TextColor="DarkOrchid"/>
+
                 <Button Margin="0,10,0,0" Text="Learn more"
                         Command="{Binding OpenWebCommand}"
                         BackgroundColor="{StaticResource Primary}"
+                        TextColor="White" />
+                <Button Margin="0,10,0,0" Text="Learn more"
+                        Command="{Binding OpenWebCommand}"
+                        BackgroundColor="DarkOrchid"
                         TextColor="White" />
             </StackLayout>
         </ScrollView>
