Kreiran login i logout i meni u zavisnosti od trenutnog usera

--- a/Poliklinika.Mobile/Poliklinika.Mobile/AppShell.xaml
+++ b/Poliklinika.Mobile/Poliklinika.Mobile/AppShell.xaml
@@ -2,6 +2,7 @@
 <Shell xmlns="http://xamarin.com/schemas/2014/forms" 
        xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
        xmlns:local="clr-namespace:Poliklinika.Mobile.Views"
+       xmlns:this="clr-namespace:Poliklinika.Mobile"
        Title="Poliklinika.Mobile"
        x:Class="Poliklinika.Mobile.AppShell">
   
@@ -78,23 +79,37 @@
         FlyoutDisplayOptions="AsMultipleItems" will create a separate flyout item for each child element    
         https://docs.microsoft.com/dotnet/api/xamarin.forms.shellgroupitem.flyoutdisplayoptions?view=xamarin-forms
     -->
+
+    <Shell.BindingContext>
+        <this:IsLogedIn></this:IsLogedIn>
+    </Shell.BindingContext>
+    
     <FlyoutItem Title="Početna" Icon="icon_about.png">
         <ShellContent Route="AboutPage" ContentTemplate="{DataTemplate local:AboutPage}" />
     </FlyoutItem>
     <FlyoutItem Title="Odjeli" Icon="icon_feed.png">
         <ShellContent Route="ItemsPage" ContentTemplate="{DataTemplate local:ItemsPage}" />
     </FlyoutItem>
-    <FlyoutItem Title="Prijava">
+    <FlyoutItem x:Name="Profil" IsVisible="{Binding LogedIn}" Title="Profil">
+        <ShellContent Route="Profil" ContentTemplate="{DataTemplate local:Profil}" />
+    </FlyoutItem>
+    <FlyoutItem x:Name="Poruke" IsVisible="{Binding LogedIn}" Title="Poruke">
+        <ShellContent Route="Poruke" ContentTemplate="{DataTemplate local:Poruke}" />
+    </FlyoutItem>
+    <FlyoutItem x:Name="Prijava" IsVisible="{Binding NotLogedIn}" Title="Prijava">
         <ShellContent Route="LoginPage" ContentTemplate="{DataTemplate local:LoginPage}" />
     </FlyoutItem>
-    <FlyoutItem Title="Kreiraj korisnički račun">
+    <FlyoutItem x:Name="Register" IsVisible="{Binding NotLogedIn}" Title="Kreiraj korisnički račun">
         <ShellContent Route="Register" ContentTemplate="{DataTemplate local:Register}" />
+    </FlyoutItem>
+    <FlyoutItem x:Name="Odjava" IsVisible="{Binding LogedIn}" Title="Odjava">
+        <ShellContent Route="Odjava" ContentTemplate="{DataTemplate local:Odjava}" />
     </FlyoutItem>
 
     <!-- When the Flyout is visible this will be a menu item you can tie a click behavior to  -->
 
-    <MenuItem Text="Odjava" StyleClass="MenuItemLayoutStyle" Clicked="Logout_Clicked">
-    </MenuItem>
+    <!--<MenuItem Text="Odjava" StyleClass="MenuItemLayoutStyle" Clicked="Logout_Clicked">
+    </MenuItem>-->
     
     <!--
         TabBar lets you define content that won't show up in a flyout menu. When this content is active
