--- a/Poliklinika.Mobile/Poliklinika.Mobile/Views/AboutPage.xaml
+++ b/Poliklinika.Mobile/Poliklinika.Mobile/Views/AboutPage.xaml
@@ -34,12 +34,12 @@
                 <Label Text="Dođite i uvjerite se da smo tim kojem možete vjerovati. Naš zajednički cilj je Vaše zdravlje. Zaboravite čekanje na pregled, zakažite svoj pregled već danas, kada to Vama odgovara, a ostalo prepustite nama." FontSize="16" Padding="0,0,0,0"/>
                 <Label Text="Kreirajte svoj profil i postanite dio naše porodice. Ukoliko Vam je potreban savjet obratite se našim doktorima koji su uvijek tu za Vas." FontSize="16" Padding="0,0,0,0" TextColor="DarkOrchid"/>
 
-                <Button Margin="0,10,0,0" Text="Learn more"
-                        Command="{Binding OpenWebCommand}"
+                <Button x:Name="Login" Margin="0,10,0,0" Text="Prijavi se"
+                        Command="{Binding OpenLogin}"
                         BackgroundColor="{StaticResource Primary}"
                         TextColor="White" />
-                <Button Margin="0,10,0,0" Text="Learn more"
-                        Command="{Binding OpenWebCommand}"
+                <Button x:Name="Register" Margin="0,10,0,0" Text="Kreiraj korisnički račun"
+                        Command="{Binding OpenRegister}"
                         BackgroundColor="DarkOrchid"
                         TextColor="White" />
             </StackLayout>
