--- a/Poliklinika.Mobile/Poliklinika.Mobile/Views/LoginPage.xaml
+++ b/Poliklinika.Mobile/Poliklinika.Mobile/Views/LoginPage.xaml
@@ -3,15 +3,19 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:vm="clr-namespace:Poliklinika.Mobile.ViewModels"
              mc:Ignorable="d"
              x:Class="Poliklinika.Mobile.Views.LoginPage"
              Shell.NavBarIsVisible="False">
+    <ContentPage.BindingContext>
+        <vm:LoginViewModel></vm:LoginViewModel>
+    </ContentPage.BindingContext>
     <ContentPage.Content>
         <StackLayout Padding="10,0,10,0" VerticalOptions="Center">
             <Label Text="Email" />
-            <Entry Placeholder="" />
+            <Entry Text="{Binding Username}"  Placeholder="" />
             <Label Text="Šifra" />
-            <Entry Placeholder="" />
+            <Entry Text="{Binding Password}" Placeholder="" />
             <Button VerticalOptions="Center" Text="Login" Command="{Binding LoginCommand}"/>
         </StackLayout>
     </ContentPage.Content>
