--- a/Poliklinika.Mobile/Poliklinika.Mobile/Views/PrikazOdjela.xaml
+++ b/Poliklinika.Mobile/Poliklinika.Mobile/Views/PrikazOdjela.xaml
@@ -2,19 +2,34 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
              xmlns:local="clr-namespace:Poliklinika.Mobile.ViewModels"
-             x:Class="Poliklinika.Mobile.Views.PrikazOdjela">
+             x:Class="Poliklinika.Mobile.Views.PrikazOdjela"
+             xmlns:converters="clr-namespace:Poliklinika.Mobile.Converters">
+
     <ContentPage.BindingContext>
         <local:OdjelViewModel></local:OdjelViewModel>
     </ContentPage.BindingContext>
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <converters:ImageConvertor x:Key="ImageConverter"></converters:ImageConvertor>
+        </ResourceDictionary>
+    </ContentPage.Resources>
 
-    <ContentPage.Content >
+    <ContentView> 
 
         <StackLayout>
-            <Label x:Name="naziv" Text="{Binding Naziv}" />
-            <Label x:Name="opis" Text="{Binding Opis}" />
+            <Image x:Name="slika" Source="{Binding Slika, Converter={StaticResource imgConv}}"></Image>
+            <Label x:Name="naziv"  Margin="0,10,0,0" Text="{Binding Naziv}" FontSize="Header" HorizontalOptions="CenterAndExpand" />
+            <Label x:Name="opis"  Margin="0,10,0,0" Text="{Binding Opis}" FontSize="Medium" HorizontalOptions="CenterAndExpand" />
             <Label x:Name="id" Text="{Binding ID}" IsVisible="false" />
-            
+            <Button x:Name="terin" Margin="0,10,0,0" Text="Zakaži termin"
+                        Command="{Binding OpenLogin}"
+                        BackgroundColor="{StaticResource Primary}"
+                        TextColor="White" />
+            <Button x:Name="savjet" Margin="0,10,0,0" Text="Potraži stručno mišljenje"
+                        Command="{Binding OpenRegister}"
+                        BackgroundColor="DarkOrchid"
+                        TextColor="White" />
         </StackLayout>
 
-    </ContentPage.Content>
+     </ContentView>
 </ContentPage>
