--- a/Poliklinika.Mobile/Poliklinika.Mobile/Views/OdabirTerminaPage.xaml
+++ b/Poliklinika.Mobile/Poliklinika.Mobile/Views/OdabirTerminaPage.xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:converters="clr-namespace:Poliklinika.Mobile.Converters"
-             x:Class="Poliklinika.Mobile.Views.OdabirTerminaPage">
+             x:Class="Poliklinika.Mobile.Views.OdabirTerminaPage"
+             xmlns:vm ="clr-namespace:Poliklinika.Mobile.ViewModels">
     <ContentPage.Resources>
         <ResourceDictionary>
             <converters:ImageConvertor x:Key="ImageConverter"></converters:ImageConvertor>
@@ -10,10 +11,12 @@
     </ContentPage.Resources>
     <ContentPage.Content>
         <StackLayout>
-            <Image x:Name="slika"  VerticalOptions="Center"  ></Image>
+            <Image x:Name="slika"  VerticalOptions="Center" ></Image>
             <Label x:Name="naziv" Margin="0,10,0,0" Text="test" TextColor="CornflowerBlue" FontSize="Header" HorizontalOptions="CenterAndExpand" />
             <Label Text="Odaberi slobodan termin" FontSize="Header" Margin="0,10,0,20" HorizontalOptions="CenterAndExpand"/>
-            <DatePicker  />
+            <Label x:Name="OdjelID" Text="{Binding OdjelID}" IsVisible="false" ></Label>
+            <DatePicker Date="{Binding Datum}" />
+            <Picker ItemsSource="{Binding Termini}" ></Picker>
             <Button x:Name="zakazi" Margin="0,20,0,0" Text="Zakaži"
                         Command="{Binding OpenLogin}"
                         BackgroundColor="{StaticResource Primary}"
