--- a/Poliklinika.Mobile/Poliklinika.Mobile/Views/PrikazOdjela.xaml
+++ b/Poliklinika.Mobile/Poliklinika.Mobile/Views/PrikazOdjela.xaml
@@ -10,7 +10,7 @@
     </ContentPage.BindingContext>
     <ContentPage.Resources>
         <ResourceDictionary>
-            <converters:ImageConvertor x:Key="ImageConverter"></converters:ImageConvertor>
+            <converters:ImageConvertor x:Key="imgConv"></converters:ImageConvertor>
         </ResourceDictionary>
     </ContentPage.Resources>
 
@@ -21,8 +21,8 @@
             <Label x:Name="naziv"  Margin="0,10,0,0" Text="{Binding Naziv}" FontSize="Header" HorizontalOptions="CenterAndExpand" />
             <Label x:Name="opis"  Margin="0,10,0,0" Text="{Binding Opis}" FontSize="Medium" HorizontalOptions="CenterAndExpand" />
             <Label x:Name="id" Text="{Binding ID}" IsVisible="false" />
-            <Button x:Name="terin" Margin="0,10,0,0" Text="Zakaži termin"
-                        Command="{Binding OpenLogin}"
+            <Button x:Name="termin" Margin="0,10,0,0" Text="Zakaži termin"
+                    Clicked="termin_Clicked"
                         BackgroundColor="{StaticResource Primary}"
                         TextColor="White" />
             <Button x:Name="savjet" Margin="0,10,0,0" Text="Potraži stručno mišljenje"
