dugme moji oregledi i provjra na butonima zakazi i savjetuj se

--- a/Poliklinika.Mobile/Poliklinika.Mobile/AppShell.xaml
+++ b/Poliklinika.Mobile/Poliklinika.Mobile/AppShell.xaml
@@ -105,6 +105,9 @@
     <FlyoutItem x:Name="Odjava" IsVisible="{Binding LogedIn}" Title="Odjava">
         <ShellContent Route="Odjava" ContentTemplate="{DataTemplate local:Odjava}" />
     </FlyoutItem>
+    <FlyoutItem x:Name="Pregled" IsVisible="{Binding LogedIn}" Title="Moji pregledi">
+        <ShellContent Route="Pregled"     />
+    </FlyoutItem>
 
     <!-- When the Flyout is visible this will be a menu item you can tie a click behavior to  -->
 
