--- a/Poliklinika.Mobile/Poliklinika.Mobile/Views/PrikazOdjela.xaml
+++ b/Poliklinika.Mobile/Poliklinika.Mobile/Views/PrikazOdjela.xaml
@@ -26,7 +26,7 @@
                         BackgroundColor="{StaticResource Primary}"
                         TextColor="White" />
             <Button x:Name="savjet" Margin="0,10,0,0" Text="Potraži stručno mišljenje"
-                        Command="{Binding OpenRegister}"
+                       Clicked="savjet_Clicked"
                         BackgroundColor="DarkOrchid"
                         TextColor="White" />
         </StackLayout>
