--- a/Poliklinika.Mobile/Poliklinika.Mobile/Views/OdabirTerminaPage.xaml
+++ b/Poliklinika.Mobile/Poliklinika.Mobile/Views/OdabirTerminaPage.xaml
@@ -16,7 +16,7 @@
             <Label Text="Odaberi slobodan termin" FontSize="Header" Margin="0,10,0,20" HorizontalOptions="CenterAndExpand"/>
             <Label x:Name="OdjelID" Text="{Binding OdjelID}" IsVisible="false" ></Label>
             <DatePicker Date="{Binding Datum}" />
-            <Picker ItemsSource="{Binding Termini}" ></Picker>
+            <Picker x:Name="Termini" ItemsSource="{Binding Termini}" ></Picker>
             <Button x:Name="zakazi" Margin="0,20,0,0" Text="Zakaži"
                         Command="{Binding OpenLogin}"
                         BackgroundColor="{StaticResource Primary}"
