--- a/Poliklinika.Mobile/Poliklinika.Mobile/Views/OdabirSavjetnikaPage.xaml
+++ b/Poliklinika.Mobile/Poliklinika.Mobile/Views/OdabirSavjetnikaPage.xaml
@@ -2,11 +2,15 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Poliklinika.Mobile.Views.OdabirSavjetnikaPage">
-    <ContentPage.Content>
+    
+        <ContentPage.Content>
         <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
+            <Label Text="Izaberi doktora kojem želiš poslati poruku "
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
+            <Picker x:Name="picker"/>
+
+
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
