--- a/Poliklinika.Mobile/Poliklinika.Mobile/Views/PrikazPregledaPage.xaml
+++ b/Poliklinika.Mobile/Poliklinika.Mobile/Views/PrikazPregledaPage.xaml
@@ -1,32 +1,29 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Poliklinika.Mobile.Views.ItemsPage"
-             Title="{Binding Title}"
-             xmlns:local="clr-namespace:Poliklinika.Mobile.ViewModels"  
-             xmlns:model="clr-namespace:Poliklinika.Mobile.Models"  
-             x:Name="BrowseItemsPage">
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+             xmlns:viewmodels="clr-namespace:Poliklinika.Mobile.ViewModels"
+             x:Class="Poliklinika.Mobile.Views.PrikazPregledaPage">
     <ContentPage.BindingContext>
-        <local:ItemsViewModel></local:ItemsViewModel>
+        <viewmodels:KorisnikPregled></viewmodels:KorisnikPregled>
     </ContentPage.BindingContext>
 
     <ContentPage.Content>
         <StackLayout>
             <Label Text="Odjeli" FontSize="Header"
-                   VerticalOptions="CenterAndExpand"
-                   HorizontalOptions="CenterAndExpand"/>
-            <ListView ItemsSource="{Binding OdjeliLista}" ItemSelected="ListView_ItemSelected">
+                   VerticalOptions="StartAndExpand"
+                   HorizontalOptions="StartAndExpand"/>
+            <ListView ItemsSource="{Binding PreglediLista}">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
                             <StackLayout Padding="10" Orientation="Horizontal">
-                               
-                                    <Label Text="{Binding Naziv}" 
+
+                                <Label Text="{Binding Datum}" 
                                            LineBreakMode="NoWrap" 
                                            Style="{DynamicResource ListItemTextStyle}" 
                                            FontSize="30"
                                            HorizontalOptions="CenterAndExpand"/>
-                                 
+
                             </StackLayout>
                         </ViewCell>
                     </DataTemplate>
@@ -34,6 +31,5 @@
             </ListView>
         </StackLayout>
     </ContentPage.Content>
-    
-    
+
 </ContentPage>
