--- a/Poliklinika.Mobile/Poliklinika.Mobile/Views/PrikazPregledaPage.xaml
+++ b/Poliklinika.Mobile/Poliklinika.Mobile/Views/PrikazPregledaPage.xaml
@@ -16,28 +16,20 @@
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
-                            <StackLayout Padding="10" Margin="0,20,0,0" Orientation="Horizontal">
-
-                                <!--<Label Text="{Binding Datum}" 
-                                           LineBreakMode="NoWrap" 
-                                           Style="{DynamicResource ListItemTextStyle}" 
-                                           FontSize="20"
-                                           HorizontalOptions="StartAndExpand"/>-->
-
+                            <StackLayout Padding="10" Margin="0,20,80,0" Orientation="Horizontal">
                                 <Label>
                                     <Label.Text 
                                         Style="{DynamicResource ListItemTextStyle}" 
                                         FontSize="20"
                                         HorizontalOptions="StartAndExpand"
                                         LineBreakMode="NoWrap">
-                                        
                                         <MultiBinding StringFormat="{}{0}    {1}">
                                             <Binding  Path="Datum" />
                                             <Binding Path="odjel.Naziv" />
                                         </MultiBinding>
                                     </Label.Text>
                                 </Label>
-
+                                <Button Text="Pregled nalaza"/>
                             </StackLayout>
                         </ViewCell>
                     </DataTemplate>
