--- a/Poliklinika.Mobile/Poliklinika.Mobile/Views/PrikazPregledaPage.xaml
+++ b/Poliklinika.Mobile/Poliklinika.Mobile/Views/PrikazPregledaPage.xaml
@@ -29,7 +29,7 @@
                                         </MultiBinding>
                                     </Label.Text>
                                 </Label>
-                                <Button Text="Pregled nalaza"/>
+                                <Button Text="Pregled nalaza" Clicked="Button_Clicked" />
                             </StackLayout>
                         </ViewCell>
                     </DataTemplate>
