--- a/Poliklinika.Mobile/Poliklinika.Mobile/Views/ChatPage.xaml
+++ b/Poliklinika.Mobile/Poliklinika.Mobile/Views/ChatPage.xaml
@@ -3,7 +3,11 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Poliklinika.Mobile.Views.ChatPage">
     <ScrollView>
-        <StackLayout x:Name="Container" >
+        <StackLayout>
+            <StackLayout x:Name="Container" >
+            </StackLayout>
+            <Entry x:Name="Poruka" Placeholder="Vasa Poruka" ></Entry>
+            <Button Text="Posalji" Clicked="Button_Clicked" ></Button>
         </StackLayout>
     </ScrollView>
 </ContentPage>
