--- a/Poliklinika.Mobile/Poliklinika.Mobile/Views/PlacanjePage.xaml
+++ b/Poliklinika.Mobile/Poliklinika.Mobile/Views/PlacanjePage.xaml
@@ -1,16 +1,91 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+             xmlns:d="http://xamarin.com/schemas/2014/forms/design"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:vm="clr-namespace:Poliklinika.Mobile.ViewModels"
+             mc:Ignorable="d"
              x:Class="Poliklinika.Mobile.Views.PlacanjePage">
-    
-    <ContentPage.Content>
-        
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+    <ContentView>
+        <StackLayout Margin="25,0,25,0" BackgroundColor="White">
+            <StackLayout>
+                <Label HorizontalOptions="Center"
+                   FontSize="20"
+                       Margin="0,80,0,0">
+                    <Label.FormattedText>
+                        <FormattedString>
+                            <FormattedString.Spans>
+                                <Span Text="Odjel:" FontSize="20" TextColor="Black"/>
+                                <Span Text=" "></Span>
+                                <Span Text="{Binding Pregled.OdjelNaziv}" />
+                            </FormattedString.Spans>
+                        </FormattedString>
+                    </Label.FormattedText>
+                </Label>
+                <Label HorizontalOptions="Center"
+                   FontSize="14">
+                    <Label.FormattedText>
+                        <FormattedString>
+                            <FormattedString.Spans>
+                                <Span Text="Datum:" FontSize="20" TextColor="Black"/>
+                                <Span Text=" "></Span>
+                                <Span Text="{Binding Pregled.Datum}" FontSize="20" TextColor="Red"/>
+                            </FormattedString.Spans>
+                        </FormattedString>
+                    </Label.FormattedText>
+                </Label>
+
+            </StackLayout>
+            <StackLayout Orientation="Horizontal" >
+                <Label Text="Unesite broj kreditne kartice"
+                               d:Text="{Binding .}"
+                               LineBreakMode="WordWrap"
+                               FontAttributes="Bold"
+                               FontSize="17"
+                               TextColor="black"/>
+                <Image Source="creditcard.png"></Image>
+            </StackLayout>
+            <Grid>
+                <Grid.RowDefinitions >
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="50"/>
+
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition Width="1*"/>
+                </Grid.ColumnDefinitions>
+                <StackLayout Grid.Row="0" Grid.ColumnSpan="2">
+                    <Entry x:Name="Number" Placeholder="Enter Card Number" TextChanged="Number_changed" Unfocused="Number_unfocused" Text="{Binding Number}" Keyboard="Keyboard.Numeric"/>
+                    <Label x:Name="ErrorLabel_CardNumber"  IsVisible="{Binding IsError_CardNumber}" TextColor="Red" FontSize="13" />
+                </StackLayout>
+                <StackLayout  Grid.Row="1" Grid.Column="0">
+                    <Entry x:Name="Month" Placeholder="MM" Text="{Binding ExpMonth}" TextChanged="Month_changed" Unfocused="Month_unfocused" ReturnType="Next" Keyboard="Keyboard.Numeric"/>
+                    <Label x:Name="ErrorLabel_Month"  IsVisible="{Binding IsError_Month}"  TextColor="Red" FontSize="13"/>
+                </StackLayout>
+                <StackLayout  Grid.Row="1" Grid.Column="1">
+                    <Entry x:Name="Year" Placeholder="YY" Text="{Binding ExpYear}" TextChanged="Year_changed" Unfocused="Year_unfocused" ReturnType="Next" Keyboard="Keyboard.Numeric"/>
+                    <Label x:Name="ErrorLabel_Year" IsVisible="{Binding IsError_Year}" TextColor="Red" FontSize="13"/>
+                </StackLayout>
+                <StackLayout Grid.Row="2" Grid.ColumnSpan="2">
+                    <Entry x:Name="Cvv" Placeholder="Cvv code" Text="{Binding Cvc}" TextChanged="Cvv_changed" Unfocused="Cvv_unfocused" ReturnType="Next" Keyboard="Keyboard.Numeric" IsPassword="True"/>
+                    <Label x:Name="ErrorLabel_Cvv" IsVisible="{Binding IsError_Cvv}" TextColor="Red" FontSize="13" />
+                </StackLayout>
+            </Grid>
+
+            <Label Text="Cijena pregleda: 100KM (Avans: 50KM)"
+                   LineBreakMode="NoWrap"
+                   Padding="0, 0, 0, 0"
+                   FontAttributes="bold"
+                   FontSize="17" 
+                   Margin="0,-45,0,0"/>
+            <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="End" >
+                <Button x:Name="Submit_Button" BorderRadius="10" Text="Uplati" Command="{Binding SubmitCommand}" BackgroundColor="Teal" Padding="10, 10, 10 ,10" TextColor="black" HorizontalOptions="FillAndExpand" VerticalOptions="EndAndExpand"/>
+            </StackLayout>
         </StackLayout>
-        
-        
-    </ContentPage.Content>
+    </ContentView>
 </ContentPage>
