--- a/Poliklinika.Mobile/Poliklinika.Mobile/Views/PrikazNalazaPage.xaml
+++ b/Poliklinika.Mobile/Poliklinika.Mobile/Views/PrikazNalazaPage.xaml
@@ -3,10 +3,12 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Poliklinika.Mobile.Views.PrikazNalazaPage">
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+        <StackLayout VerticalOptions="CenterAndExpand"
+                     HorizontalOptions="CenterAndExpand">
+            <Label Text="Doktor:" TextColor="Red"/>
+            <Label x:Name="doc" FontSize="Medium" />
+            <Label Text="Dijagnoza i terapija:" TextColor="Red"/>
+            <Label x:Name="opis" />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
