--- a/Poliklinika.Mobile/Poliklinika.Mobile/Views/AboutPage.xaml
+++ b/Poliklinika.Mobile/Poliklinika.Mobile/Views/AboutPage.xaml
@@ -14,7 +14,7 @@
             <Color x:Key="Accent">#96d1ff</Color>
         </ResourceDictionary>
     </ContentPage.Resources>
-  
+
     <Grid>
 
         <Grid.RowDefinitions>
@@ -43,12 +43,16 @@
                         BackgroundColor="DarkOrchid"
                         TextColor="White" />
             </StackLayout>
+           
         </ScrollView>
-        <ScrollView x:Name="preporukeView">
+        <Grid x:Name="gridPreporuke">
+            
+        <ScrollView Grid.Row="2" >
             <StackLayout x:Name="preporukeContainer">
-                <Label Text="Preporuke:" TextColor="Red" FontSize="20"></Label>
+                
             </StackLayout>
         </ScrollView>
+        </Grid>
+        
     </Grid>
-    
 </ContentPage>
