--- a/Poliklinika.Mobile/Poliklinika.Mobile/Views/LoginPage.xaml
+++ b/Poliklinika.Mobile/Poliklinika.Mobile/Views/LoginPage.xaml
@@ -13,9 +13,9 @@
     <ContentPage.Content>
         <StackLayout Padding="10,0,10,0" VerticalOptions="Center">
             <Label Text="Email" />
-            <Entry Text="{Binding Username}"  Placeholder="" />
+            <Entry Text="{Binding Username}"   />
             <Label Text="Šifra" />
-            <Entry Text="{Binding Password}" Placeholder="" />
+            <Entry Text="{Binding Password}" IsPassword="True" />
             <Button VerticalOptions="Center" Text="Login" Command="{Binding LoginCommand}"/>
         </StackLayout>
     </ContentPage.Content>
