promjena register page i vm

--- a/Poliklinika.Mobile/Poliklinika.Mobile/Views/Register.xaml
+++ b/Poliklinika.Mobile/Poliklinika.Mobile/Views/Register.xaml
@@ -9,14 +9,20 @@
     <ContentPage.Content>
         <StackLayout VerticalOptions="CenterAndExpand"
                    HorizontalOptions="CenterAndExpand" >
-            <Label Text="Unesi email i šifru. Pritiskom na dugme Kreiraj, napravi svoj profil"
+            <Label Text="Unesi svoje podatke. Pritiskom na dugme Kreiraj, napravi svoj profil"
                    FontSize="Medium" Padding="0,30,0,0" TextColor="Orchid"
                    VerticalOptions="CenterAndExpand"
                    HorizontalOptions="CenterAndExpand"/>
+            <Label Text="Ime" />
+            <Entry Text="{Binding Ime}"/>
+            <Label Text="Prezime" />
+            <Entry Text="{Binding Prezime}"  />
+            <Label Text="Datum rođenja" />
+            <DatePicker Date="{Binding DatumRodjenja}" />
             <Label Text="Email" />
-            <Entry Text="{Binding Username}"  Placeholder="" />
+            <Entry Text="{Binding Username}" />
             <Label Text="Šifra" />
-            <Entry Text="{Binding Password}"  Placeholder="" IsPassword="True" />
+            <Entry Text="{Binding Password}" IsPassword="True" />
             <Button VerticalOptions="Center" Text="Kreiraj" Command="{Binding RegisterCommand}"/>
         </StackLayout>
     </ContentPage.Content>
